fixed android scroll jump bug

--- a/css/less/components/portfolio/feature.less
+++ b/css/less/components/portfolio/feature.less
@@ -54,7 +54,7 @@
 @media @pm {
 	.feature_headline {
 		text-align: center;
-		padding-top: 4rem;
+		padding-top: 5rem;
 		padding-bottom: 8rem;
 	}
 }
