--- a/css/less/components/portfolio/image-full.less
+++ b/css/less/components/portfolio/image-full.less
@@ -1,6 +1,21 @@
 .image-full {
 	img {
 		width: 100%;
-		height:auto;
+		height: auto;
 	}
+
+	&.is-pearson-image {
+		width: 60%;
+		margin-left: auto;
+		margin-right: auto;
+		border-radius: 25px;
+		overflow: hidden;
+	}
+}
+
+@media @pm {
+	.image-full.is-pearson-image {
+		border-radius: 10px;
+	}
+
 }
